xv: workaround corruption

Keeping the video pixmaps persistent sometimes will lead to video
corruption (shifted chroma planes) for unknown reasons. Possibly
there are some subtle pixmap handling bugs in xv or other parts of
the glamor code. To workaround, simply destroy pixmaps after they
have been used once.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=72821

Signed-off-by: Alex Deucher <alexander.deucher@amd.com>